task<implement WishListGesture and OrdiniGesture>